starspan ChangeLog
$Id$
                                    

2005-04-28 (0.98beta)
	Quadtree algorithm implemented for polygon rasterization:
	New traverser/polyqt.cc.
	Preliminary tests OK. The speedup over the flood-fill algorithm
	with a polygon that	contains 22860 pixels is:
	   time(flood-fill) / time(quadtree) = 98s/4s = 24.5 (!)
	TODO: More tests; Check possible memory leak; check the other
	goemetry types resulting from intersections that are ignored. 
	
2005-04-26 (0.98beta)
	Changes committed.
	Removed temporary NEW-SOURCES-PENDING-MERGE-COMMIT/.
	Pending: configure regeneration.
	
2005-04-21 (*****  to-be 0.98beta   )
	Traverser: Finally implemented a flood-filling algorithm to 
	rasterize polygons. Temporary source files:(*)
		NEW-SOURCES-PENDING-MERGE-COMMIT/traverser/traverser.h
		NEW-SOURCES-PENDING-MERGE-COMMIT/traverser/traverser.cc
		
	Other minor changes also pending for merge and commit:
		NEW-SOURCES-PENDING-MERGE-COMMIT/starspan_countbyclass.cc
		
	(*) cvs repository (on casil) is down now, so I'll wait
	    until it's up again to update and commit actual sources... 

2005-04-08 (0.97beta)
	Setting up GNU build scheme:
	
	File renamings:
		DEVNOTES.txt --> ChangeLog
		README.txt   --> README
		INSTALL.txt   --> INSTALL
		starspan     --> starspan.in
	New files:
		configure.in
		Makefile.am
		AUTHORS
		COPYING
		NEWS
		THANKS
	Removed files:
		Makefile.props.templ 
		Makefile.props.fink
		

2005-04-04
	New BUILD.windows.txt with notes about compiling the whole
	system in windows

2005-03-23 (0.963beta)
	Makefile.props.templ: GDAL_SRC_DIR removed: we don't
	need this any more as GDAL (from 1.2.6) already installs
	vrtdataset.h in GDAL's PREFIX/include/.
	
	traverser.cc: Fixed a bug related to rerunning a traversal
	on new rasters. In particular starspan_csv.cc works on a
	raster at a time. The symptom was that the first specified
	raster was processed OK but not the others in a command line
	like this: